# fwkSudoku

./: .appveyor.yml  .clang-format  .clang-tidy  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .travis.yml  .yamllint  .yamllint.yml  CMakeLists.txt  CPPLINT.cfg  Configuration.md  LICENSE  README.md  Sudoku.sln  appveyor.yml
.github/workflows/: clang-format.yml  cpplint.yml  yamllint.yml
Console/: CMakeLists.txt  Console.cpp  Console.h  Console.vcxproj  Console.vcxproj.filters  Sudoku.cpp  precompiled.cpp  precompiled.h  stdafx.cpp  stdafx.h  targetver.h
Sudoku/: Board.fwd.h  Board.h  Board.natvis  Board_Iterators.h  Board_Section.h  Board_Section_iterator.h  Board_Section_traits.h  Board_Sections.fwd.h  Board_Sections.h  Board_Utilities.h  Decision.h  Iterator_Utilities.h  Location.fwd.h  Location.h  Location.natvis  Location_Utilities.h  Options.h  Options.natvis  README.md  ReadMe.txt  Section.h  Size.h  Solver.fwd.h  Solver.h  SolverBase.h  Solver_Utilities.h  Solvers_Appearance.h  Solvers_find.h  Solvers_remove_option.h  Solvers_set_option.h  Sudoku.cpp  Sudoku.h  Sudoku.vcxitems  Sudoku.vcxitems.filters  Sudoku.vcxproj  Sudoku.vcxproj.filters  Transpose.h  Value.h  exceptions.h  packages.config  (+6 more)
Sudoku/Strategic/: Solver.fwd.h  Solver.h  Solvers_find.h  Solvers_remove_option.h  Solvers_set_option.h
Sudoku/Sudoku/: Board.fwd.h  Board.h  Board.natvis  Board_Iterators.h  Board_Section.h  Board_Section_iterator.h  Concepts.h  Decision.h  Location.h  Location_Utilities.h  Normalize.h  OptionValue.h  Options.h  Options.natvis  Size.h  Solver.h  Solvers_find.h  Solvers_remove_option.h  Solvers_set_option.h  Transpose.h  Value.h  exceptions.h  precompiled_basic.h  traits.h
Sudoku/Sudoku/Board/: Iterators.h  Section.h  Section_iterator.h  Section_traits.h
SudokuTests/: .clang-tidy  Board.cpp  Board_Iterators.cpp  Board_Section.cpp  Board_Section_Iterators.cpp  Board_Section_iterator.cpp  Board_Section_traits.cpp  Board_Sections.cpp  CMakeLists.txt  CPPLINT.cfg  ConceptsTests.cpp  Decision.cpp  GoogleTest.md  GoogleTest.txt  Location.cpp  Normalize.cpp  OptionValueTest.cpp  Options.cpp  README.md  Size.cpp  Solver.cpp  Solver_remove_option.cpp  Solvers_find.cpp  Solvers_remove_option.cpp  Solvers_set_option.cpp  SudokuTests.cpp  SudokuTests.vcxproj  SudokuTests.vcxproj.filters  Transpose.cpp  Value.cpp  exceptions.cpp  precompiled.cpp  precompiled.h  print_Options.h  traits.cpp
SudokuTests/Coverage/: coverage.ps1
UnitTest/: Board.cpp  Board_Section.cpp  Board_Section_Iterator.cpp  Location.cpp  Options.cpp  Solver.cpp  SolverBase.cpp  TestObjects.h  UnitTest.vcxproj  UnitTest.vcxproj.filters  packages.config  stdafx.cpp  stdafx.h  uBoard_Section.cpp  uBoard_Section_Iterator.cpp
cmake/: add_to_source_file_properties.cmake  enable_project_warnings.cmake  msvc_warnings_list.cmake  set_precompiled_header.cmake  subproject_functions.cmake
docs/: Configuration.md
msvc/: CppCoreCheckAllRules.ruleset  GoogleTestAdapter.RunSettings  TestAdapter.runsettings
